# AttestPQC-demo-starter-kit

./: .gitignore  LICENSE  README.md
contracts/: .env.example  foundry.toml
contracts/script/: DeployPQCAttestationRegistry.s.sol
contracts/scripts/: grant-issuer.ps1
contracts/src/: PQCAttestationRegistry.sol
contracts/test/: PQCAttestationRegistry.t.sol
docs/: DEPLOYMENT_GUIDE.md  FOUNDRY_TESTS_OUTLINE.md  HYBRID_PQC.md  STARK_PROOF.md
frontend/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: ConnectWallet.tsx  providers.tsx
frontend/components/dashboard/: AnchorSTARKProof.tsx  Dashboard.tsx  DashboardHeader.tsx  IssueAttestation.tsx  RegisterPQCKey.tsx  RegistryStatus.tsx  VerifyAttestation.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
frontend/lib/: hybrid-pqc.ts  pqc-demo.ts  stark-proof.ts  utils.ts  wagmi-config.ts
frontend/public/wasm/pqc/: pqc_wasm.d.ts  pqc_wasm.js  pqc_wasm_bg.wasm  pqc_wasm_bg.wasm.d.ts
frontend/public/wasm/stark/: stark_wasm.d.ts  stark_wasm.js  stark_wasm_bg.wasm  stark_wasm_bg.wasm.d.ts
pqc-wasm/: Cargo.toml
pqc-wasm/src/: lib.rs
scripts/: vendor-winter-air.py
stark-wasm/: Cargo.toml
stark-wasm/src/: attestation_air.rs  lib.rs
