[package]
name = "pqc-wasm"
version = "0.1.0"
edition = "2021"
description = "Hybrid PQC WASM bindings for AttestPQC (libcrux X25519MlKem768Draft00 + ECDSA P-256 + ML-DSA-65)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = { version = "0.10", default-features = false, features = ["std", "thread_rng"] }
libcrux-kem = { version = "0.0.8", default-features = false, features = ["std"] }
libcrux-ecdsa = { version = "0.0.7", default-features = false, features = ["rand", "std"] }
libcrux-ml-dsa = { version = "0.0.9", default-features = false, features = ["mldsa65", "std"] }
libcrux-ecdh = { version = "0.0.7", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true