[package]
name = "stark-wasm"
version = "0.1.0"
edition = "2021"
description = "Winterfell STARK WASM bindings for AttestPQC attestation binding proofs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = { version = "0.10", default-features = false, features = ["std", "thread_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
winterfell = "0.13.1"

[patch.crates-io]
winter-air = { path = "../vendor/winter-air-0.13.1" }

[profile.release]
opt-level = "s"
lto = true